deploy/kubernetes/phabricator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: phabricator
  name: phabricator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phabricator
  template:
    metadata:
      labels:
        app: phabricator
    spec:
      containers:
      - name: phabricator
        image: zhegao/phabricator:latest
        imagePullPolicy: Always
        args: ["start"]
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 22
          protocol: TCP
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /app/config/local.json
          name: config
          subPath: local.json
        - mountPath: /app/phabricator/support/preamble.php
          name: config
          subPath: preamble.php
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: phabricator
      - name: config
        configMap:
          name: phabricator
---
apiVersion: v1
kind: Service
metadata:
  name: phabricator
spec:
  ports:
    - protocol: TCP
      port: 80
      name: www
    - port: 22
      protocol: TCP
      name: ssh
  selector:
    app: phabricator
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phabricator
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - code.mozart.io
    secretName: mozart-tls
  rules:
  - host: code.mozart.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: phabricator
            port:
              number: 80
